# binary-codec

./: Cargo.toml  README.md
src/: decode.rs  encode.rs  error.rs  lib.rs
tests/: bitmap.rs  frame.rs
